--- a/src/app/client/mes-clients/mes-clients.component.html
+++ b/src/app/client/mes-clients/mes-clients.component.html
@@ -65,8 +65,8 @@
                            <button (click)="details(position)" class="glyphicon glyphicon-plus" *ngIf="!tableauVisibiliteDetail[position]">Détails </button>
                            <button (click)="reduire(position)"  class="glyphicon glyphicon-minus" *ngIf="tableauVisibiliteDetail[position]">Réduire</button>
                            <button (click)="deleteClient(client)" class="btn btn-danger"  *ngIf="tableauVisibiliteDetail[position]" ><i class="glyphicon glyphicon-trash"></i></button>
-                           <button (click)="editeEmploye(client)" class="btn btn-primary"  *ngIf="tableauVisibiliteDetail[position]" ><i class="glyphicon glyphicon-pencil"></i></button>
-
+<!--                            <button (click)="editeEmploye(client)" class="btn btn-primary"  *ngIf="tableauVisibiliteDetail[position]" ><i class="glyphicon glyphicon-pencil"></i></button>
+ -->
 
                        </td>
                       </tr>
