--- a/src/app/client/mes-clients/mes-clients.component.html
+++ b/src/app/client/mes-clients/mes-clients.component.html
@@ -22,7 +22,7 @@
                         <td>
                           <div class="media">
                             <a href="#" class="pull-left">
-                               <img src="../assets/SET/B1.jpg" class="media-photo">
+                             <img  src="../assets/SET1/user-profile.png" class="media-photo">
                             </a>
                             <div class="media-body">
                                   <div class="title">
