--- a/src/app/Adm/messages-adm/messages-adm.component.html
+++ b/src/app/Adm/messages-adm/messages-adm.component.html
@@ -7,13 +7,13 @@
                                             <div class="chat_people">
                                               <div class="chat_img"> <img  src="../assets/SET1/user-profile.png" alt="sunil"></div>
                                               <div class="chat_ib">
-                                                <h5>{{message.nomClient}}  <span class="date"> {{message.telClient}} </span></h5>        
+                                                <h5>{{message.nomClient}}, tel:{{message.telClient}}
+                                                        <span class="date"> {{message.date}} </span></h5>        
                                                 
                                                 <p>{{message.email}}</p>
 
                                                  <div class="msg_cotainer">
                                                  <p> {{message.message}}.</p>
-                                             <span class="msg_time">8:40 AM, Today</span>
                                                                
                                          </div>
                                                 
