--- a/src/app/client/acceuil-client/acceuil-client.component.html
+++ b/src/app/client/acceuil-client/acceuil-client.component.html
@@ -8,8 +8,8 @@
           </a>
           <!--  -->
           <div class="user-name">
-            <h5><a href="#">Sen Menagere</a></h5>
-            <span><a href="#">Administration</a></span>
+            <h5><a >{{clientConnecte.prenom}}</a></h5>
+            <span><a >{{clientConnecte.nom}}</a></span>
           </div>
           <a class="mail-dropdown pull-right" href="javascript:;">
               <i class="fa fa-chevron-down"></i>
