--- a/src/app/conctact/conctact.component.html
+++ b/src/app/conctact/conctact.component.html
@@ -1,8 +1,8 @@
 <app-script></app-script>
 <body>
-  <app-navbar></app-navbar>
-  <app-head-client></app-head-client>
-
+<!--   <app-navbar></app-navbar>
+ -->
+ <app-head-client></app-head-client>
   
     <!-- espace Section1 -->   
     <section class="testimonials" id="gobottom">
