--- a/src/app/Adm/mes-demandes/mes-demandes.component.html
+++ b/src/app/Adm/mes-demandes/mes-demandes.component.html
@@ -1,9 +1,8 @@
-<!-- <div class="panel panel-primary">
+<div class="panel panel-primary">
   <div class="panel-heading"><span class="glyphicon glyphicon-euro
     "> Liste Des Demandes</span></div>
 <table class="table table-striped">
   <thead class="thead-dark">
-  <th>idDemande</th>
   <th>Date</th>
   <th>Service</th>
   <th>Salaire Propose</th>
@@ -13,8 +12,7 @@
 </thead>
 <tbody >
   <tr *ngFor="let dema of listeDemande " class="table-info">
-    <td class="table-primary"><span class="glyphicon glyphicon-user
-      ">{{dema.date}}</span></td>
+    <td>{{dema.date}}</td>
     <td>{{dema.services}}</td>
     <td>{{dema.salairePropose}}</td>
     <td>{{dema.salaireRetenue}}</td>
@@ -25,11 +23,7 @@
 </table>
 </div>
 
-<div> -->
-
-
-
-  
+<div>
 
   <!-- demand edite -->
   <div class="tab-content">
