--- a/src/app/Adm/espace-admin/espace-admin.component.html
+++ b/src/app/Adm/espace-admin/espace-admin.component.html
@@ -18,8 +18,8 @@
             <li><a  (click)="visibiliteEmployes()"><span class="glyphicon glyphicon-user"></span> Employes</a></li>
             <li><a (click)="visibiliteClients()"><span class="glyphicon glyphicon-briefcase"></span> Client</a></li>
             <li><a href="#"><span class="glyphicon glyphicon-cog"></span> Configuration</a></li>
-            <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Déconnexion</a></li>
-        </ul>
+<!--             <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Déconnexion</a></li>
+ -->        </ul>
       </div>
     </div>
   </nav>    
